--- a/rossmann_sale_prediction.ipynb
+++ b/rossmann_sale_prediction.ipynb
@@ -10,6 +10,7 @@
   }
  ],
  "metadata": {
+  "hide_input": false,
   "kernelspec": {
    "display_name": "Python 3 (ipykernel)",
    "language": "python",
