--- a/rossmann_sale_prediction.ipynb
+++ b/rossmann_sale_prediction.ipynb
@@ -1,9 +1,343 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "d892404d",
+   "metadata": {},
+   "source": [
+    "# Importes"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "a6e1a94f",
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2022-03-10T00:37:18.741520Z",
+     "start_time": "2022-03-10T00:37:18.729527Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "import inflection"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d12a6593",
+   "metadata": {},
+   "source": [
+    "## Helper functions"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f1d65e01",
+   "metadata": {},
+   "source": [
+    "## Loading data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "9b748aa6",
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2022-03-10T00:26:45.392586Z",
+     "start_time": "2022-03-10T00:26:44.448174Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "df_sales_raw = pd.read_csv('data/train.csv', low_memory=False)\n",
+    "df_store_raw = pd.read_csv('data/store.csv', low_memory=False)\n",
+    "\n",
+    "# merge \n",
+    "df_raw = pd.merge(df_sales_raw, df_store_raw, how='left', on='Store')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "1c921183",
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2022-03-10T00:27:08.062774Z",
+     "start_time": "2022-03-10T00:27:07.829782Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Store</th>\n",
+       "      <th>DayOfWeek</th>\n",
+       "      <th>Date</th>\n",
+       "      <th>Sales</th>\n",
+       "      <th>Customers</th>\n",
+       "      <th>Open</th>\n",
+       "      <th>Promo</th>\n",
+       "      <th>StateHoliday</th>\n",
+       "      <th>SchoolHoliday</th>\n",
+       "      <th>StoreType</th>\n",
+       "      <th>Assortment</th>\n",
+       "      <th>CompetitionDistance</th>\n",
+       "      <th>CompetitionOpenSinceMonth</th>\n",
+       "      <th>CompetitionOpenSinceYear</th>\n",
+       "      <th>Promo2</th>\n",
+       "      <th>Promo2SinceWeek</th>\n",
+       "      <th>Promo2SinceYear</th>\n",
+       "      <th>PromoInterval</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>654837</th>\n",
+       "      <td>3</td>\n",
+       "      <td>4</td>\n",
+       "      <td>2013-11-21</td>\n",
+       "      <td>7630</td>\n",
+       "      <td>824</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>a</td>\n",
+       "      <td>a</td>\n",
+       "      <td>14130.0</td>\n",
+       "      <td>12.0</td>\n",
+       "      <td>2006.0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>14.0</td>\n",
+       "      <td>2011.0</td>\n",
+       "      <td>Jan,Apr,Jul,Oct</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "        Store  DayOfWeek        Date  Sales  Customers  Open  Promo  \\\n",
+       "654837      3          4  2013-11-21   7630        824     1      1   \n",
+       "\n",
+       "       StateHoliday  SchoolHoliday StoreType Assortment  CompetitionDistance  \\\n",
+       "654837            0              0         a          a              14130.0   \n",
+       "\n",
+       "        CompetitionOpenSinceMonth  CompetitionOpenSinceYear  Promo2  \\\n",
+       "654837                       12.0                    2006.0       1   \n",
+       "\n",
+       "        Promo2SinceWeek  Promo2SinceYear    PromoInterval  \n",
+       "654837             14.0           2011.0  Jan,Apr,Jul,Oct  "
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_raw.sample()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "96a02433",
+   "metadata": {},
+   "source": [
+    "# Descrição dos dados"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "1d03a03e",
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2022-03-10T00:28:10.547780Z",
+     "start_time": "2022-03-10T00:28:10.454784Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "df1 = df_raw.copy()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "9a128110",
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2022-03-10T00:30:42.453123Z",
+     "start_time": "2022-03-10T00:30:42.440122Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['Store', 'DayOfWeek', 'Date', 'Sales', 'Customers', 'Open', 'Promo',\n",
+       "       'StateHoliday', 'SchoolHoliday', 'StoreType', 'Assortment',\n",
+       "       'CompetitionDistance', 'CompetitionOpenSinceMonth',\n",
+       "       'CompetitionOpenSinceYear', 'Promo2', 'Promo2SinceWeek',\n",
+       "       'Promo2SinceYear', 'PromoInterval'],\n",
+       "      dtype='object')"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df1.columns"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "11746d22",
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2022-03-10T00:37:21.879272Z",
+     "start_time": "2022-03-10T00:37:21.869276Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "cols_old = ['Store', 'DayOfWeek', 'Date', 'Sales', 'Customers', 'Open', 'Promo',\n",
+    "            'StateHoliday', 'SchoolHoliday', 'StoreType', 'Assortment',\n",
+    "            'CompetitionDistance', 'CompetitionOpenSinceMonth',\n",
+    "            'CompetitionOpenSinceYear', 'Promo2', 'Promo2SinceWeek',\n",
+    "            'Promo2SinceYear', 'PromoInterval']\n",
+    "\n",
+    "snakecase = lambda x: inflection.underscore(x)\n",
+    "\n",
+    "# mapea a snakecase em todas as palavras de cols_old\n",
+    "cols_new = list(map(snakecase, cols_old))\n",
+    "\n",
+    "# rename\n",
+    "df1.columns = cols_new"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "c43a3f6e",
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2022-03-10T00:37:23.917708Z",
+     "start_time": "2022-03-10T00:37:23.900703Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['store', 'day_of_week', 'date', 'sales', 'customers', 'open', 'promo',\n",
+       "       'state_holiday', 'school_holiday', 'store_type', 'assortment',\n",
+       "       'competition_distance', 'competition_open_since_month',\n",
+       "       'competition_open_since_year', 'promo2', 'promo2_since_week',\n",
+       "       'promo2_since_year', 'promo_interval'],\n",
+       "      dtype='object')"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df1.columns"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5d8a3f3a",
+   "metadata": {},
+   "source": [
+    "## Rename Columns"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "33f10201",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "dc8dbfed",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5834efba",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c29ef056",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0878a151",
+   "metadata": {},
+   "source": []
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "dd816e51",
+   "id": "d9fd8322",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d91e628b",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f0c1dea2",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c5420331",
    "metadata": {},
    "outputs": [],
    "source": []
